--- a/mavenblueprint/pom.xml
+++ b/mavenblueprint/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>se.joas</groupId>
-	<artifactId>mavenblueprint</artifactId>
+	<artifactId>mavendynamicwebblueprint</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>mavenblueprint</name>
+	<name>mavendynamicwebblueprint</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
